# ccm-edge-cv-pipeline

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
config/: pipeline_basic.yaml
docs/: architecture.md
include/core/: config_loader.hpp  ipipeline_stage.hpp  perf_timer.hpp
include/io/: icamera_source.hpp  opencv_camera.hpp
include/stages/: grayscale_stage.hpp
src/app/: main.cpp
src/core/: config_loader.cpp
src/io/: opencv_camera.cpp
src/stages/: grayscale_stage.cpp
